<?xml version="1.0"?>
<package format="2">
  <name>lidar_package</name>
  <version>0.0.1</version>
  <description>The lidar_package for handling scan data</description>

  <!-- Maintainer information -->
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <!-- License information -->
  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS core libraries dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend> 
  <exec_depend>tf</exec_depend>

  <export>
    <!-- Export other information -->
  </export>
</package>
